tests/baselines/reference/decoratorOnClassProperty11.errors.txt
decoratorOnClassProperty11.ts(4,5): error TS1329: 'dec' accepts too few arguments to be used as a decorator here. Did you mean to call it first and write '@dec()'?


==== decoratorOnClassProperty11.ts (1 errors) ====
    declare function dec(): <T>(target: any, propertyKey: string) => void;
    
    class C {
        @dec prop;
        ~~~~
!!! error TS1329: 'dec' accepts too few arguments to be used as a decorator here. Did you mean to call it first and write '@dec()'?
    }